# LongNumber

./: CMakeLists.txt  Makefile
include/: longnumber.hpp
src/: countpi.cpp  longnumber.cpp
tests/: test.cpp
